[gd_scene load_steps=12 format=3 uid="uid://cxqjtiv6ionav"]

[ext_resource type="Texture2D" uid="uid://caidy4kuidpru" path="res://20GamesMain/Assets/retro-tv-table-indoors.jpg" id="1_1am11"]
[ext_resource type="Script" path="res://20GamesMain/20_games_main.gd" id="1_cbgx4"]
[ext_resource type="Shader" path="res://20GamesMain/20_games_main.gdshader" id="2_awn1b"]
[ext_resource type="AudioStream" uid="uid://6o1kgmwpy5qh" path="res://20GamesMain/Assets/Music/bgm_9.wav" id="2_b1trb"]
[ext_resource type="FontFile" uid="uid://c4c2xa0ait2b2" path="res://Pong/Assets/Fonts/Kenney Blocks.ttf" id="2_lnqgg"]
[ext_resource type="Texture2D" uid="uid://b01kxc6pstvud" path="res://20GamesMain/Assets/retro-tv-table-indoors_cutout.png" id="4_itiqh"]
[ext_resource type="Theme" uid="uid://cbl87heqdty7v" path="res://20GamesMain/20_games_main_default_theme.tres" id="5_fsrwx"]

[sub_resource type="LabelSettings" id="LabelSettings_mih8a"]
font = ExtResource("2_lnqgg")
font_size = 128

[sub_resource type="LabelSettings" id="LabelSettings_b82ep"]
font = ExtResource("2_lnqgg")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_2nd8p"]
font = ExtResource("2_lnqgg")
font_size = 48

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rtmkl"]
shader = ExtResource("2_awn1b")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.2
shader_parameter/scanlines_width = 0.15
shader_parameter/grille_opacity = 0.2
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = false
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 30.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.03
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 1.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="20GamesMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cbgx4")
pong_game = "res://Pong/pong_main_menu.tscn"

[node name="MenuBGMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_b1trb")
volume_db = -7.0
autoplay = true

[node name="Retro-tv-table-indoors" type="Sprite2D" parent="."]
position = Vector2(369, 186)
scale = Vector2(0.22, 0.22)
texture = ExtResource("1_1am11")

[node name="TV20GamesTitle" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -22.0
offset_right = -31.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)

[node name="20" type="Label" parent="TV20GamesTitle"]
offset_left = 252.0
offset_top = 78.0
offset_right = 444.0
offset_bottom = 270.0
text = "20"
label_settings = SubResource("LabelSettings_mih8a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GAMES" type="Label" parent="TV20GamesTitle"]
offset_left = 212.0
offset_top = 177.0
offset_right = 468.0
offset_bottom = 369.0
text = "GAMES"
label_settings = SubResource("LabelSettings_b82ep")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CHALLENGE" type="Label" parent="TV20GamesTitle"]
offset_left = 182.0
offset_top = 296.0
offset_right = 506.0
offset_bottom = 368.0
text = "CHALLENGE"
label_settings = SubResource("LabelSettings_2nd8p")

[node name="TVSettingsScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="TVSettingsScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.0
offset_top = -102.0
offset_right = -9.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_fsrwx")
text = "SETTINGS: 
UNDER CONSTRUCTION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="TVSettingsScreen"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.0
offset_top = 11.0
offset_right = 23.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_fsrwx")
theme_override_font_sizes/font_size = 16
text = "PRESS ANY KEY TO RETURN TO MAIN MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsBackButton" type="Button" parent="TVSettingsScreen"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = 21.0
offset_right = -95.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_fsrwx")
theme_type_variation = &"TVButton"
theme_override_font_sizes/font_size = 32
text = "BACK"

[node name="CRT Effect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_rtmkl")
layout_mode = 0
offset_left = 123.0
offset_top = 77.0
offset_right = 579.0
offset_bottom = 419.0

[node name="Retro-tv-table-indoorsCutout" type="Sprite2D" parent="."]
position = Vector2(369, 186)
scale = Vector2(0.22, 0.22)
texture = ExtResource("4_itiqh")

[node name="GameMenu" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="GameMenu"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -203.0
offset_right = 4.0
offset_bottom = 154.0
grow_horizontal = 0
grow_vertical = 2

[node name="PongButton" type="Button" parent="GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../AboutButton")
theme = ExtResource("5_fsrwx")
text = "PONG"
alignment = 0

[node name="Button2" type="Button" parent="GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_fsrwx")
text = "BREAKOUT"
alignment = 0

[node name="Button3" type="Button" parent="GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_fsrwx")
text = "FLAPPY BIRD"
alignment = 0

[node name="Button4" type="Button" parent="GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_fsrwx")
text = "SUPER MARIO BROS"
alignment = 0

[node name="Button5" type="Button" parent="GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_fsrwx")
text = "SUPER MONKEY 
   BALL"
alignment = 0

[node name="Button6" type="Button" parent="GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_fsrwx")
text = "CONWAY'S GAME
   OF LIFE"
alignment = 0

[node name="Button7" type="Button" parent="GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_fsrwx")
text = "FLAPPY BIRD"
alignment = 0

[node name="Button8" type="Button" parent="GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_fsrwx")
text = "FLAPPY BIRD"
alignment = 0

[node name="Button9" type="Button" parent="GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_fsrwx")
text = "FLAPPY BIRD"
alignment = 0

[node name="Button10" type="Button" parent="GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_fsrwx")
text = "FLAPPY BIRD"
alignment = 0

[node name="HSeparator" type="HSeparator" parent="GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_fsrwx")

[node name="SettingsButton" type="Button" parent="GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_fsrwx")
text = "SETTINGS"
alignment = 0

[node name="CreditsButton" type="Button" parent="GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_fsrwx")
text = "CREDITS"
alignment = 0

[node name="AboutButton" type="Button" parent="GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_bottom = NodePath("../PongButton")
theme = ExtResource("5_fsrwx")
text = "ABOUT"
alignment = 0

[connection signal="pressed" from="TVSettingsScreen/SettingsBackButton" to="." method="_on_settings_back_button_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/PongButton" to="." method="_on_pong_button_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/AboutButton" to="." method="_on_about_button_pressed"]
